<resources>
    <string name="app_name">The Trio App</string>
    <string name="search">Search</string>
    <string name="search1">Search…</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="app">The TRIO</string>
    <string name="moto">Your favorite review app</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginButtonT">Login</string>
    <string name="newAcctT">New User? Create Account</string>
    <string name="createT">Create Account</string>
    <string name="backToLoginT">Already Registered? Back to Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav">Favorite</string>
    <string name="logoutT">Log Out</string>
    <string name="blank"></string>
    <string name="addressText">Address:</string>
    <string name="ratingText">Average User Rating: </string>
    <string name="nameText">Name</string>
    <string name="reviewButtonT">Reviews</string>
    <string name="distanceText">Distance:</string>
    <string name="tempReviewT">Use Yelp API to get reviews of a restaurant by place ID</string>
    <string name="nullText">null</string>
</resources>